--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 
 # dependencies
 /node_modules
+package-lock.json
 
 # IDEs and editors
 /.idea
@@ -38,3 +39,5 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+
