--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "AGPLv3",
   "private": true,
   "dependencies": {
-    "@andalugeeks/andaluh": "1.1.3",
+    "@andalugeeks/andaluh": "1.1.6",
     "@angular/animations": "^6.1.0",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "~6.1.2",
+    "@angular/cli": "^6.1.5",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
